--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -28,7 +27,7 @@
 
     <groupId>net.adamcin.bnd</groupId>
     <artifactId>net.adamcin.bnd.vendor</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <name>Bnd Vendor Plugin</name>
@@ -43,7 +42,7 @@
         <url>https://github.com/adamcin/${project.artifactId}</url>
         <developerConnection>scm:git:git@github.com:adamcin/${project.artifactId}.git</developerConnection>
         <connection>scm:git://github.com/adamcin/${project.artifactId}.git</connection>
-        <tag>HEAD</tag>
+        <tag>net.adamcin.bnd.vendor-0.1.0</tag>
     </scm>
 
     <properties>
